@@ -62,6 +62,12 @@
          </dependency>
 
          <dependency>
+             <groupId>io.aeron</groupId>
+             <artifactId>aeron-all</artifactId>
+         </dependency>
+
+
+         <dependency>
              <groupId>org.springframework</groupId>
              <artifactId>spring-context</artifactId>
              <scope>test</scope>
@@ -81,5 +87,18 @@
              <scope>test</scope>
          </dependency>
      </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <argLine>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
